--- a/HK/experienceC.html
+++ b/HK/experienceC.html
@@ -3409,7 +3409,7 @@ Set up your profile, stats and meters, and other relevant information here!
   &lt;&lt;/script&gt;&gt;
 &lt;&lt;/button&gt;&gt;
 
-&lt;span style=&#39;font-size: 0.8em;&#39;&gt;（實境體驗製作單位：街密小組）&lt;/span&gt;</tw-passagedata><tw-passagedata pid="20" name="PassageFooter" tags="nobr noreturn" position="125,250" size="100,100">&lt;&lt;if not tags().includes(&quot;nofooter&quot;)&gt;&gt;&lt;&lt;replace &quot;#footer&quot;&gt;&gt;&lt;img src=&quot;media/img/organization.png&quot; class=&quot;footerimage&quot;&gt;&lt;&lt;/replace&gt;&gt;&lt;&lt;/if&gt;&gt;</tw-passagedata><tw-passagedata pid="21" name="ch01_1" tags="autosave" position="900,300" size="100,100">你是在香港求學的學生，準備擔任青年大使參加內地交流計劃。
+&lt;span style=&#39;font-size: 0.8em;&#39;&gt;（實境體驗製作單位：街密小組）&lt;/span&gt;</tw-passagedata><tw-passagedata pid="20" name="PassageFooter" tags="nobr noreturn" position="125,250" size="100,100">&lt;&lt;if tags().includes(&quot;nofooter&quot;)&gt;&gt;&lt;&lt;replace &quot;#footer&quot;&gt;&gt;&lt;&lt;/replace&gt;&gt;&lt;&lt;else&gt;&gt;&lt;&lt;replace &quot;#footer&quot;&gt;&gt;&lt;img src=&quot;media/img/organization.png&quot; class=&quot;footerimage&quot;&gt;&lt;&lt;/replace&gt;&gt;&lt;&lt;/if&gt;&gt;</tw-passagedata><tw-passagedata pid="21" name="ch01_1" tags="autosave" position="900,300" size="100,100">你是在香港求學的學生，準備擔任青年大使參加內地交流計劃。
 
 為了測試你是否有資格，接下來將進行相關試驗，準備好之後點擊「開始測驗」按鈕。
 
