--- a/HK/experienceA.html
+++ b/HK/experienceA.html
@@ -3784,7 +3784,7 @@ HFXXX是港澳居民居留證的身分代碼。
       &lt;&lt;nobr&gt;&gt;&lt;div class=&quot;grid-text&quot;&gt;
         &lt;&lt;switch $ch3result2&gt;&gt;
         &lt;&lt;case &quot;failure01&quot;&gt;&gt;
-        你選擇用@@color:#890000;投資移民@@定居台灣。&lt;br&gt;最後你放棄移民的打算，帶著孩子回到香港。
+        你選擇用@@color:#890000;投資移民@@定居台灣。&lt;br&gt;最後你放棄移民台灣的打算，帶著孩子去其他國家。
         &lt;&lt;case &quot;success01&quot;&gt;&gt;
         你選擇用@@color:#890000;投資移民@@定居台灣。&lt;br&gt;最後你獲得居留證明，順利移民台灣。
         &lt;&lt;/switch&gt;&gt;
