--- a/transfer/index.html
+++ b/transfer/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>轉址</title>
-	<meta http-equiv="refresh" content="0;url=https://map.jsdc.com.tw/folklore/01/Login" />
+	<meta http-equiv="refresh" content="0;url=https://map.jsdc.com.tw/folklore/01/Login?openExternalBrowser=1" />
   </head>
   <body>
   
