--- a/twcitygod/demov2.html
+++ b/twcitygod/demov2.html
@@ -4484,7 +4484,7 @@ _contents
 &lt;name&gt;文武判官&lt;/name&gt;&lt;img&gt;文武判官.png&lt;/img&gt;&lt;p&gt;我們奉城隍爺之命，來協助妳找到惡源。&lt;/p&gt;
 &lt;name&gt;小之&lt;/name&gt;&lt;img&gt;小之.png&lt;/img&gt;&lt;p&gt;勞煩前輩多多幫忙。&lt;/p&gt;
 &lt;name&gt;&lt;/name&gt;&lt;img&gt;文武判官.png&lt;/img&gt;&lt;p&gt;我在文武判官的幫助下，調查這對爺孫背後可能發生的事情。&lt;/p&gt;
-&lt;name&gt;&lt;/name&gt;&lt;scene&gt;default_scene.png&lt;/scene&gt;&lt;img&gt;盤子發光.png&lt;/img&gt;&lt;p&gt;我腦海中頓時閃過一個畫面，似乎是&quot;某人手捧盤子，盤子上的某物正在發光&lt;/p&gt;
+&lt;name&gt;&lt;/name&gt;&lt;scene&gt;default_scene.png&lt;/scene&gt;&lt;img&gt;盤子發光.png&lt;/img&gt;&lt;p&gt;我腦海中頓時閃過一個畫面，似乎是&quot;某人&quot;手捧盤子，盤子上的某物正在發光&lt;/p&gt;
 &lt;name&gt;&lt;/name&gt;&lt;img&gt;盤子發光.png&lt;/img&gt;&lt;p&gt;莫非是某種線索？&lt;/p&gt;</tw-passagedata><tw-passagedata pid="40" name="ch1-3" tags="center nobr black" position="1700,1200" size="100,100">&lt;&lt;set _VNOptions to { showHistory: true }&gt;&gt;
 &lt;&lt;timed 0.5s t8n&gt;&gt;&lt;div class=&quot;title-box&quot;&gt;&lt;h3&gt;第一幕&lt;/h3&gt;&lt;/div&gt;&lt;&lt;/timed&gt;&gt;
 &lt;&lt;timed 1s t8n&gt;&gt;\
