--- a/twcitygod/demov2.html
+++ b/twcitygod/demov2.html
@@ -282,6 +282,7 @@ body.bg1 {
   width: 45%;
   max-width: 40vw;
   background-image: unset !important;
+  background-color: var(--btn);
 }
 
 /* 標題 */
