--- a/twcitygod/demov2.html
+++ b/twcitygod/demov2.html
@@ -4702,7 +4702,7 @@ _contents
 &lt;p&gt;&lt;img src=&quot;media/img/霸凌3.png&quot; class=&quot;diaryimage&quot;&gt;&lt;em&gt;嗚嗚，為什麼，&lt;/em&gt;&lt;em&gt;我明明這麼努力。&lt;/em&gt;&lt;em&gt;聰正，這個渾蛋⋯⋯&lt;/em&gt;&lt;/p&gt;
 &lt;p&gt;當我總算找到「惡源」的方向時，一段陌生的對話傳到我的耳邊。&lt;/p&gt;</tw-passagedata><tw-passagedata pid="78" name="dialoguePages10" tags="" position="1200,2700" size="100,100">&lt;name&gt;&lt;/name&gt;&lt;scene&gt;character_bg.png&lt;/scene&gt;&lt;img&gt;default_dialogue.png&lt;/img&gt;&lt;p&gt;雖然我不知道這段對話的意義，&lt;br&gt;但話中提到&quot;聰正&quot;。&lt;/p&gt;
 &lt;name&gt;&lt;/name&gt;&lt;img&gt;default_dialogue.png&lt;/img&gt;&lt;p&gt;難道與孫子有什麼關聯？&lt;/p&gt;</tw-passagedata><tw-passagedata pid="79" name="ch3-2" tags="center nobr black autosave" position="1400,2700" size="100,100">&lt;&lt;set _VNOptions to { showHistory: true }&gt;&gt;
-&lt;&lt;timed 0.5s t8n&gt;&gt;&lt;div class=&quot;title-box&quot;&gt;&lt;h3&gt;第一幕&lt;/h3&gt;&lt;/div&gt;&lt;&lt;/timed&gt;&gt;
+&lt;&lt;timed 0.5s t8n&gt;&gt;&lt;div class=&quot;title-box&quot;&gt;&lt;h3&gt;第三幕&lt;/h3&gt;&lt;/div&gt;&lt;&lt;/timed&gt;&gt;
 &lt;&lt;timed 1s t8n&gt;&gt;\
 &lt;div id=&quot;vn-text-main&quot; class=&quot;vn-speech-container&quot;&gt;
 &lt;div class=&quot;vn-dialogue&quot;&gt;
@@ -4740,7 +4740,7 @@ _contents
 /* [[ch3關卡1破關]] */</tw-passagedata><tw-passagedata pid="82" name="dialoguePages11" tags="" position="1700,2700" size="100,100">&lt;name&gt;&lt;/name&gt;&lt;scene&gt;character_bg.png&lt;/scene&gt;&lt;img&gt;default_dialogue.png&lt;/img&gt;&lt;p&gt;我知道了&quot;聰正&quot;這個人與孫子發生過糾紛。&lt;/p&gt;
 &lt;name&gt;&lt;/name&gt;&lt;img&gt;default_dialogue.png&lt;/img&gt;&lt;p&gt;那個&quot;動&quot;，意味著&quot;動機&quot;。&lt;/p&gt;
 &lt;name&gt;&lt;/name&gt;&lt;img&gt;default_dialogue.png&lt;/img&gt;&lt;p&gt;那個&quot;動機&quot;又是什麼？&lt;/p&gt;</tw-passagedata><tw-passagedata pid="83" name="ch3-4" tags="center nobr black autosave" position="1900,2700" size="100,100">&lt;&lt;set _VNOptions to { showHistory: true }&gt;&gt;
-&lt;&lt;timed 0.5s t8n&gt;&gt;&lt;div class=&quot;title-box&quot;&gt;&lt;h3&gt;第一幕&lt;/h3&gt;&lt;/div&gt;&lt;&lt;/timed&gt;&gt;
+&lt;&lt;timed 0.5s t8n&gt;&gt;&lt;div class=&quot;title-box&quot;&gt;&lt;h3&gt;第三幕&lt;/h3&gt;&lt;/div&gt;&lt;&lt;/timed&gt;&gt;
 &lt;&lt;timed 1s t8n&gt;&gt;\
 &lt;div id=&quot;vn-text-main&quot; class=&quot;vn-speech-container&quot;&gt;
 &lt;div class=&quot;vn-dialogue&quot;&gt;
