--- a/twcitygod/demov2.html
+++ b/twcitygod/demov2.html
@@ -4196,6 +4196,9 @@ Set up your profile, stats and meters, and other relevant information here!
 /* ENDING */
 &lt;&lt;set $ending to []&gt;&gt;
 
+/* 關卡 */
+&lt;&lt;set $answer = []&gt;&gt;
+
 /* ChapelR Meter Macro set up */
 /* these stat meter set ups are purely examples and do not need to be used */
 
