--- a/twcitygod/demov2.html
+++ b/twcitygod/demov2.html
@@ -228,7 +228,7 @@ body.nonav #title-bar, body.nonav #nav {
 
 /* "bg+數字"標籤：自訂背景 */
 body.start-menu {
-  background-image: url("media/img/bgloading.png");
+  background-image: url("media/img/bgloading_pc.png");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -423,15 +423,15 @@ custom animation
 .vn-diary-container {
   font-family: 'naikaifont';
   position: absolute;
-  width: 90vw;
+  width: 400px;
   max-height: 80vh;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  font-size: 0.9em;
+  font-size: 1em;
   line-height: 1.6;
   overflow: auto;
-  padding: 12vw;
+  padding: 50px;
   box-sizing: border-box;
   aspect-ratio: 8 / 10;
 }
@@ -768,7 +768,7 @@ custom animation
 }
 
 #start-title .titleimage {
-  width: 60vw;
+  height: 15vh;
   max-width: 350px;
 }
 
@@ -1117,10 +1117,8 @@ body {
 
 
 /* start menu */
-
 #start-title {
   display: block;
-  margin-top: 15vh;
   text-transform: uppercase;
   text-align: center;
   font-size: 2em;
@@ -1135,11 +1133,12 @@ body {
 }
 
 #start-menu {
-  display: grid;
-  grid-gap: 1em;
+  display: flex;
+  grid-gap: 1vh;
   width: 100%;
   height: 100%;
-  justify-content: center;
+  flex-direction: column;
+  align-items: center;
 }
 
 #start-menu button {
@@ -1153,6 +1152,11 @@ body {
 #start-menu button:hover {
   background-color: var(--bg2);
   color: var(--text_light);
+}
+
+.start-menu #passages {
+  margin-top: 50vh;
+  height: 100%;
 }
 
 .start-menu #nav {
@@ -1215,6 +1219,8 @@ body {
 .passage {
   line-height: 1.75;
   text-align: justify;
+  max-width: 400px;
+  margin: 0 auto;
 }
 
 #passages::-webkit-scrollbar {
@@ -2122,21 +2128,14 @@ html.indicator .special-choice-item a::after, html.indicator .flirt-choice-item 
 /* tablet ui */
 
 @media only screen and (max-width: 1024px) {
-
-  #start-menu {
-    height: 100%;
-    width: 100%;
-    margin: auto;
-  }
-
   #console {
     width: 85vw;
     height: 85vh;
     padding: 1vh 5vw 3vh 5vw;
   }
 
-  .start-menu #passages {
-    height: 100%;
+  body.start-menu {
+    background-image: url("media/img/bgloading.png");
   }
 
   #ui-dialog-body, #ui-dialog-titlebar {
@@ -2170,6 +2169,14 @@ html.indicator .special-choice-item a::after, html.indicator .flirt-choice-item 
 
   #console {
     padding: 2vh 5vw 3vh 5vw;
+  }
+
+  body.start-menu {
+    background-image: url("media/img/bgloading.png");
+  }
+
+  .start-menu #passages {
+    margin-top: 40vh;
   }
 
   .start-menu #header {
@@ -2234,6 +2241,12 @@ html.indicator .special-choice-item a::after, html.indicator .flirt-choice-item 
 
   #notify.open {
     top: 0;
+  }
+
+  /* <<VNtext>> */
+  .vn-diary-container {
+    width: 90vw;
+    padding: 12vw;
   }
 
 }</style><script role="script" id="twine-user-script" type="text/twine-javascript">/* IMPORT */
@@ -4125,7 +4138,6 @@ if you search strings localization in the Sugarcube 2 Documentation, it will lea
 &lt;&lt;button &quot;開新遊戲&quot; &quot;guide1&quot;&gt;&gt;&lt;&lt;/button&gt;&gt;
 &lt;/div&gt;&lt;/div&gt;&lt;/div&gt;</tw-passagedata><tw-passagedata pid="2" name="start-menu" tags="start-menu noreturn nobr nofooter" position="600,200" size="100,100">&lt;&lt;fadein 1s&gt;&gt;
     &lt;div id=&quot;start-title&quot;&gt;&lt;&lt;include &#39;遊戲標題&#39;&gt;&gt;&lt;/div&gt;
-    &lt;div id=&quot;start-subtitle&quot;&gt;&lt;&lt;include &#39;遊戲副標題&#39;&gt;&gt;&lt;/div&gt;
     &lt;div id=&quot;start-menu&quot;&gt;&lt;&lt;include &#39;遊戲開始選單&#39;&gt;&gt;&lt;/div&gt;
 &lt;&lt;/fadein&gt;&gt;</tw-passagedata><tw-passagedata pid="3" name="credits" tags="credits noreturn" position="125,125" size="100,100">&lt;h2&gt;▍設計開發&lt;/h2&gt;
 故事文本：陳志軒、楚然
