--- a/twcitygod/demov2.html
+++ b/twcitygod/demov2.html
@@ -2375,6 +2375,23 @@ importScripts("https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js")
 		console.log(err);
 	});
 
+/*設置favicon*/
+$(document.head).append("<link rel='icon' href='media/img/favicon.png'>");
+
+/* 在<head>元素中置入google分析的script程式碼 */
+// 創建 <script> 元素
+var scriptElement = document.createElement("script");
+// 設置 <script> 元素的屬性
+scriptElement.async = true;
+scriptElement.src = "https://www.googletagmanager.com/gtag/js?id="; //替換成自己專案的GA追蹤碼
+// 創建用於嵌入代碼的 <script> 元素
+var codeElement = document.createElement("script");
+// 設置 <script> 元素的內容
+codeElement.innerHTML = "window.dataLayer = window.dataLayer || [];\nfunction gtag(){dataLayer.push(arguments);}\ngtag('js', new Date());\ngtag('config', 'G-K1D02YD84S');";
+// 將 <script> 元素添加到 <head> 元素中
+document.head.appendChild(scriptElement);
+document.head.appendChild(codeElement);
+
 
 /* settings */
 Setting.addHeader("變更設定");
@@ -3253,62 +3270,6 @@ window.slideWin = function (dir) {
 }());
 
 
-/* twine-user-script : <<captureScreen>> */
-Macro.add('captureScreen', {
-	handler: function() {
-	try {
-		var screenID = this.args[0] || "#screen"; // 預設id為#screen的<div>區塊
-
-		// 創建一個覆蓋層來顯示提示文字
-		var overlay = document.createElement('div');
-		overlay.style.position = 'fixed';
-		overlay.style.top = '0';
-		overlay.style.left = '0';
-		overlay.style.width = '100%';
-		overlay.style.height = '100%';
-		overlay.style.backgroundColor = 'rgba(0, 0, 0, 0.5)';
-		overlay.style.color = 'white';
-		overlay.style.display = 'flex';
-		overlay.style.justifyContent = 'center';
-		overlay.style.alignItems = 'center';
-		overlay.style.zIndex = '1000';
-		overlay.innerText = '產生圖片中...';
-		document.body.appendChild(overlay);
-
-		// 開始截圖過程
-		html2canvas(document.querySelector(screenID), {
-			useCORS: true, // 允许跨域资源加载
-			backgroundColor: null, // 保持原始背景色
-			imageTimeout: 0, // 防止加载图像时超时
-			scale: 2, // 提高缩放比例以提升图片清晰度
-			logging: true // 启用日志以查看详细信息
-		}).then(canvas => {
-			var image = canvas.toDataURL("image/png");
-			var fileName = "screenshot_" + Date.now() + ".png";
-			var link = document.createElement("a");
-			link.href = image;
-			link.download = fileName;
-			link.click();
-			
-			// 移除覆蓋層
-			document.body.removeChild(overlay);
-		}).catch(error => {
-			console.error("截圖過程中發生錯誤: ", error.toString());
-			// 移除覆蓋層
-			document.body.removeChild(overlay);
-		});
-		
-	} catch (error) {
-		console.error("發生錯誤: ", error.toString());
-		// 如果錯誤發生在截圖之前，移除覆蓋層
-		if (overlay && document.body.contains(overlay)) {
-		document.body.removeChild(overlay);
-		}
-	}
-	}
-});
-
-
 /* twine-user-script : <<runAbacus>> */
 /* coment--使用方法
   ::passage
@@ -4128,6 +4089,68 @@ window.show8tip = function() {
     );
     $tipContainer.append($tipContent);
 };
+
+/* twine-user-script : <<captureScreen>> */
+// ==========================================
+// <<captureScreen ".class">>
+// ==========================================
+// 匯入html2canvas
+importScripts("https://html2canvas.hertzen.com/dist/html2canvas.js");
+
+// 新增自訂巨集<<captureScreen>>
+Macro.add('captureScreen', {
+	handler: function() {
+	try {
+		var screenID = this.args[0] || "#screen"; // 預設id為#screen的<div>區塊
+
+		// 創建一個覆蓋層來顯示提示文字
+		var overlay = document.createElement('div');
+		overlay.style.position = 'fixed';
+		overlay.style.top = '0';
+		overlay.style.left = '0';
+		overlay.style.width = '100%';
+		overlay.style.height = '100%';
+		overlay.style.backgroundColor = 'rgba(0, 0, 0, 0.5)';
+		overlay.style.color = 'white';
+		overlay.style.display = 'flex';
+		overlay.style.justifyContent = 'center';
+		overlay.style.alignItems = 'center';
+		overlay.style.zIndex = '1000';
+		overlay.innerText = '產生圖片中...';
+		document.body.appendChild(overlay);
+
+		// 開始截圖過程
+		html2canvas(document.querySelector(screenID), {
+			useCORS: true, // 允许跨域资源加载
+			backgroundColor: null, // 保持原始背景色
+			imageTimeout: 0, // 防止加载图像时超时
+			scale: 2, // 提高缩放比例以提升图片清晰度
+			logging: true // 启用日志以查看详细信息
+		}).then(canvas => {
+			var image = canvas.toDataURL("image/png");
+			var fileName = "screenshot_" + Date.now() + ".png";
+			var link = document.createElement("a");
+			link.href = image;
+			link.download = fileName;
+			link.click();
+			
+			// 移除覆蓋層
+			document.body.removeChild(overlay);
+		}).catch(error => {
+			console.error("截圖過程中發生錯誤: ", error.toString());
+			// 移除覆蓋層
+			document.body.removeChild(overlay);
+		});
+		
+	} catch (error) {
+		console.error("發生錯誤: ", error.toString());
+		// 如果錯誤發生在截圖之前，移除覆蓋層
+		if (overlay && document.body.contains(overlay)) {
+		document.body.removeChild(overlay);
+		}
+	}
+	}
+});
 
 
 /* change localization template */
