--- a/twcitygod/demov2.html
+++ b/twcitygod/demov2.html
@@ -535,6 +535,8 @@ custom animation
   padding: 50px;
   box-sizing: border-box;
   aspect-ratio: 8 / 10;
+  border-radius: 10px;
+  box-shadow: #00000080 3px 3px 6px 2px;
 }
 
 /* 旁白模式插圖 */
@@ -720,14 +722,14 @@ custom animation
 /* 對話回顧按鈕 */
 .vn-history-button,
 #vn-history button {
-  background: #9b59b6 !important;
+  background: #d68858 !important;
   color: white !important;
   padding: 5px !important;
 }
 
 .vn-history-button:hover,
 #vn-history button:hover {
-  background: #8e44ad !important;
+  background: #f0a679 !important;
   border: solid 2px #cdcdcd  !important;
   color: black !important;
 }
@@ -1364,12 +1366,12 @@ body {
 /* links, button, select, textbox, listbox, cycle */
 
 a {
-  color: #ce0000;
+  color: #31b1bd;
   opacity: 0.7;
 }
 
 a:hover {
-  color: #ff0;
+  color: #1e6066;
   opacity: 1;
   text-decoration: none;
 }
@@ -4474,7 +4476,7 @@ Set up your profile, stats and meters, and other relevant information here!
 /* ChapelR Meter Macro set up */
 /* these stat meter set ups are purely examples and do not need to be used */
 
-&lt;&lt;preload  &#39;media/img/menu.jpg&#39; &#39;media/img/府城隍廟平面圖.jpg&#39; &#39;media/img/撥動算盤.jpg&#39; &#39;media/img/關卡4答案.jpg&#39; &#39;media/img/bg1.png&#39; &#39;media/img/bgloading.png&#39; &#39;media/img/bgloading_pc.png&#39; &#39;media/img/bookbg.png&#39; &#39;media/img/book_bg.png&#39; &#39;media/img/button_bg.png&#39; &#39;media/img/cardbg.png&#39; &#39;media/img/character_bg.png&#39; &#39;media/img/default_dialogue.png&#39; &#39;media/img/default_scene.png&#39; &#39;media/img/diarybg.png&#39; &#39;media/img/endlogo.png&#39; &#39;media/img/gamelogo.png&#39; &#39;media/img/headlogo.png&#39; &#39;media/img/loadscreen.png&#39; &#39;media/img/title_bg.png&#39; &#39;media/img/win.png&#39; &#39;media/img/七爺.png&#39; &#39;media/img/七爺八爺.png&#39; &#39;media/img/八爺.png&#39; &#39;media/img/准考證.png&#39; &#39;media/img/城隍.png&#39; &#39;media/img/大算盤.png&#39; &#39;media/img/孫子.png&#39; &#39;media/img/對聯.png&#39; &#39;media/img/對話框-七爺.png&#39; &#39;media/img/對話框-八爺.png&#39; &#39;media/img/小之.png&#39; &#39;media/img/小之到廟前.png&#39; &#39;media/img/彩繪門枕石.png&#39; &#39;media/img/文判官.png&#39; &#39;media/img/文武判官.png&#39; &#39;media/img/武判官.png&#39; &#39;media/img/爾來了.png&#39; &#39;media/img/盤子發光.png&#39; &#39;media/img/算盤背景-解鎖前.png&#39; &#39;media/img/算盤說明.png&#39; &#39;media/img/老人.png&#39; &#39;media/img/老人孫子.png&#39; &#39;media/img/霸凌1.png&#39; &#39;media/img/霸凌2.png&#39; &#39;media/img/霸凌3.png&#39; &#39;media/img/對話框-七爺.png&#39; &#39;media/img/對話框-八爺.png&#39;&gt;&gt; </tw-passagedata><tw-passagedata pid="9" name="title-bar" tags="noreturn nobr" position="325,0" size="100,100">&lt;div id=&quot;title-container&quot;&gt;
+&lt;&lt;preload  &#39;media/img/menu.jpg&#39; &#39;media/img/府城隍廟平面圖.jpg&#39; &#39;media/img/撥動算盤.jpg&#39; &#39;media/img/關卡4答案.jpg&#39; &#39;media/img/bg1.png&#39; &#39;media/img/bgloading.png&#39; &#39;media/img/bgloading_pc.png&#39; &#39;media/img/bookbg.png&#39; &#39;media/img/book_bg.png&#39; &#39;media/img/button_bg.png&#39; &#39;media/img/cardbg.png&#39; &#39;media/img/character_bg.png&#39; &#39;media/img/default_dialogue.png&#39; &#39;media/img/default_scene.png&#39; &#39;media/img/diarybg.png&#39; &#39;media/img/endlogo.png&#39; &#39;media/img/favicon.png&#39; &#39;media/img/gamelogo.png&#39; &#39;media/img/headlogo.png&#39; &#39;media/img/loadscreen.png&#39; &#39;media/img/title_bg.png&#39; &#39;media/img/win.png&#39; &#39;media/img/七爺.png&#39; &#39;media/img/七爺八爺.png&#39; &#39;media/img/八爺.png&#39; &#39;media/img/准考證.png&#39; &#39;media/img/城隍.png&#39; &#39;media/img/大算盤.png&#39; &#39;media/img/孫子.png&#39; &#39;media/img/對聯.png&#39; &#39;media/img/對話框-七爺.png&#39; &#39;media/img/對話框-八爺.png&#39; &#39;media/img/小之.png&#39; &#39;media/img/小之到廟前.png&#39; &#39;media/img/彩繪門枕石.png&#39; &#39;media/img/文武判官.png&#39; &#39;media/img/爾來了.png&#39; &#39;media/img/盤子發光.png&#39; &#39;media/img/算盤說明.png&#39; &#39;media/img/老人.png&#39; &#39;media/img/老人孫子.png&#39; &#39;media/img/霸凌1.png&#39; &#39;media/img/霸凌2.png&#39; &#39;media/img/霸凌3.png&#39;&gt;&gt; </tw-passagedata><tw-passagedata pid="9" name="title-bar" tags="noreturn nobr" position="325,0" size="100,100">&lt;div id=&quot;title-container&quot;&gt;
     &lt;span class=&quot;title-item&quot;&gt;&lt;img src=&quot;media/img/headlogo.png&quot; class=&quot;titleimage&quot;&gt;&lt;/span&gt;
 &lt;/div&gt;</tw-passagedata><tw-passagedata pid="10" name="nav" tags="noreturn nobr" position="425,0" size="100,100">&lt;&lt;link &#39;&lt;i class=&quot;fas fa-save&quot; alt=&quot;saves&quot;&gt;&lt;/i&gt;&#39;&gt;&gt;&lt;&lt;run UI.saves();&gt;&gt;&lt;&lt;/link&gt;&gt;
 
@@ -4748,7 +4750,7 @@ _contents
 /*[[ch1關卡1]]*/</tw-passagedata><tw-passagedata pid="38" name="ch1關卡1" tags="center nofooter one autosave" position="1100,1325" size="100,100">&lt;&lt;set _options = [&quot;選擇答案&quot;, &quot;佛手柑&quot;, &quot;石榴&quot;, &quot;桃子&quot;]&gt;&gt;&lt;&lt;timed 0.5s t8n&gt;&gt;&lt;div class=&quot;title-box&quot;&gt;&lt;h3&gt;關卡一&lt;/h3&gt;&lt;/div&gt;&lt;&lt;/timed&gt;&gt;
 &lt;&lt;timed 1s t8n&gt;&gt;請觀察府城隍廟內的廟門，
 尋找圖畫中發光東西是何物？
-&lt;img src=&quot;media/img/盤子發光.png&quot; width=&quot;100%&quot;&gt;
+&lt;img src=&quot;media/img/盤子發光.png&quot; width=&quot;80%&quot;&gt;
 
 &lt;span class=&quot;levelinput&quot;&gt;&lt;&lt;listbox &quot;_answer&quot; autoselect&gt;&gt;&lt;&lt;optionsfrom _options&gt;&gt;&lt;&lt;/listbox&gt;&gt;&lt;/span&gt;
 &lt;&lt;button &#39;輸入&#39;&gt;&gt;
