--- a/twcitygod/demov2.html
+++ b/twcitygod/demov2.html
@@ -4783,7 +4783,7 @@ Set up your profile, stats and meters, and other relevant information here!
 &lt;/div&gt;&lt;/div&gt;
 &lt;/div&gt;
 &lt;&lt;/timed&gt;&gt;
-/*[[ch1-4]]*/</tw-passagedata><tw-passagedata pid="41" name="ch1-4" tags="center nobr black notran" position="1900,1200" size="100,100">&lt;&lt;set _VNOptions to {  showHistory: true }&gt;&gt;
+/*[[ch1-4]]*/</tw-passagedata><tw-passagedata pid="41" name="ch1-4" tags="center nobr black autosave" position="1900,1200" size="100,100">&lt;&lt;set _VNOptions to {  showHistory: true }&gt;&gt;
 &lt;div class=&quot;title-box&quot;&gt;&lt;h3&gt;第一幕&lt;/h3&gt;&lt;/div&gt;
 &lt;div id=&quot;vn-character&quot;&gt;&lt;span id=&quot;characterimg&quot;&gt;&lt;/span&gt;&lt;/div&gt;
 &lt;&lt;timed 0.5s t8n&gt;&gt;&lt;&lt;VNText &quot;dialoguePages5&quot; _VNOptions &quot;ch2-0&quot;&gt;&gt;&lt;&lt;/timed&gt;&gt;
@@ -4973,7 +4973,7 @@ Set up your profile, stats and meters, and other relevant information here!
 &lt;/div&gt;&lt;/div&gt;
 &lt;/div&gt;
 &lt;&lt;/timed&gt;&gt;
-/*[[ch3-3]]*/</tw-passagedata><tw-passagedata pid="80" name="ch3-3" tags="center nobr black notran" position="1600,2800" size="100,100">&lt;&lt;set _VNOptions to {  showHistory: true }&gt;&gt;
+/*[[ch3-3]]*/</tw-passagedata><tw-passagedata pid="80" name="ch3-3" tags="center nobr black autosave" position="1600,2800" size="100,100">&lt;&lt;set _VNOptions to {  showHistory: true }&gt;&gt;
 &lt;div class=&quot;title-box&quot;&gt;&lt;h3&gt;第三幕&lt;/h3&gt;&lt;/div&gt;
 &lt;div id=&quot;vn-character&quot;&gt;&lt;span id=&quot;characterimg&quot;&gt;&lt;/span&gt;&lt;/div&gt;
 &lt;&lt;timed 0.5s t8n&gt;&gt;&lt;&lt;VNText &quot;dialoguePages11&quot; _VNOptions &quot;ch3-4&quot;&gt;&gt;&lt;&lt;/timed&gt;&gt;
@@ -5009,7 +5009,7 @@ Set up your profile, stats and meters, and other relevant information here!
 &lt;/div&gt;&lt;/div&gt;
 &lt;/div&gt;
 &lt;&lt;/timed&gt;&gt;
-/*[[ch3-5]]*/</tw-passagedata><tw-passagedata pid="84" name="ch3-5" tags="center nobr black notran" position="2100,2800" size="100,100">&lt;&lt;set _VNOptions to {  showHistory: true }&gt;&gt;
+/*[[ch3-5]]*/</tw-passagedata><tw-passagedata pid="84" name="ch3-5" tags="center nobr black autosave" position="2100,2800" size="100,100">&lt;&lt;set _VNOptions to {  showHistory: true }&gt;&gt;
 &lt;div class=&quot;title-box&quot;&gt;&lt;h3&gt;第三幕&lt;/h3&gt;&lt;/div&gt;
 &lt;div id=&quot;vn-character&quot;&gt;&lt;span id=&quot;characterimg&quot;&gt;&lt;/span&gt;&lt;/div&gt;
 &lt;&lt;timed 0.5s t8n&gt;&gt;&lt;&lt;VNText &quot;dialoguePages12&quot; _VNOptions &quot;ch3關卡1&quot;&gt;&gt;&lt;&lt;/timed&gt;&gt;
@@ -5170,7 +5170,7 @@ Set up your profile, stats and meters, and other relevant information here!
 	&lt;&lt;/if&gt;&gt;
 &lt;&lt;/button&gt;&gt;
 &lt;&lt;/timed&gt;&gt;
-/* [[ch2關卡1破關]] */</tw-passagedata><tw-passagedata pid="106" name="ch2關卡1-2提示" tags="" position="200,900" size="100,100">答案是選擇左上與右下的照片。</tw-passagedata><tw-passagedata pid="107" name="ch1-3error" tags="center nobr black autosave" position="1800,1100" size="100,100">&lt;&lt;set _VNOptions to { showHistory: true }&gt;&gt;
+/* [[ch2關卡1破關]] */</tw-passagedata><tw-passagedata pid="106" name="ch2關卡1-2提示" tags="" position="200,900" size="100,100">答案是選擇左上與右下的照片。</tw-passagedata><tw-passagedata pid="107" name="ch1-3error" tags="center nobr black" position="1800,1100" size="100,100">&lt;&lt;set _VNOptions to { showHistory: true }&gt;&gt;
 &lt;&lt;timed 0.5s t8n&gt;&gt;&lt;div class=&quot;title-box&quot;&gt;&lt;h3&gt;第一幕&lt;/h3&gt;&lt;/div&gt;&lt;&lt;/timed&gt;&gt;
 &lt;&lt;timed 1s t8n&gt;&gt;
 &lt;div id=&quot;vn-character&quot; style=&quot;background-image: url(&amp;quot;media/img/character_bg.png&amp;quot;);&quot;&gt;&lt;span id=&quot;characterimg&quot;&gt;&lt;img class=&quot;macro-crossfade-image&quot; src=&quot;media/img/文武判官.png&quot;&gt;&lt;/span&gt;&lt;/div&gt;
@@ -5183,7 +5183,7 @@ Set up your profile, stats and meters, and other relevant information here!
 &lt;div class=&quot;vn-buttons&quot;&gt;&lt;&lt;button &#39;繼續▸▸&#39; &#39;ch1-4&#39;&gt;&gt;&lt;&lt;/button&gt;&gt;&lt;/div&gt;
 &lt;/div&gt;
 &lt;&lt;/timed&gt;&gt;
-/*[[ch1-4]]*/</tw-passagedata><tw-passagedata pid="108" name="ch3-4error" tags="center nobr black autosave" position="2000,2700" size="100,100">&lt;&lt;set _VNOptions to { showHistory: true }&gt;&gt;
+/*[[ch1-4]]*/</tw-passagedata><tw-passagedata pid="108" name="ch3-4error" tags="center nobr black" position="2000,2700" size="100,100">&lt;&lt;set _VNOptions to { showHistory: true }&gt;&gt;
 &lt;&lt;timed 0.5s t8n&gt;&gt;&lt;div class=&quot;title-box&quot;&gt;&lt;h3&gt;第三幕&lt;/h3&gt;&lt;/div&gt;&lt;&lt;/timed&gt;&gt;
 &lt;&lt;timed 1s t8n&gt;&gt;
 &lt;div id=&quot;vn-character&quot; style=&quot;background-image: url(&amp;quot;media/img/character_bg.png&amp;quot;);&quot;&gt;&lt;span id=&quot;characterimg&quot;&gt;&lt;img class=&quot;macro-crossfade-image&quot; src=&quot;media/img/文武判官.png&quot;&gt;&lt;/span&gt;&lt;/div&gt;
@@ -5196,7 +5196,7 @@ Set up your profile, stats and meters, and other relevant information here!
 &lt;div class=&quot;vn-buttons&quot;&gt;&lt;&lt;button &#39;繼續▸▸&#39; &#39;ch3-5&#39;&gt;&gt;&lt;&lt;/button&gt;&gt;&lt;/div&gt;
 &lt;/div&gt;
 &lt;&lt;/timed&gt;&gt;
-/*[[ch3-5]]*/</tw-passagedata><tw-passagedata pid="109" name="ch3-2error" tags="black center nobr autosave" position="1500,2700" size="100,100">&lt;&lt;set _VNOptions to { showHistory: true }&gt;&gt;
+/*[[ch3-5]]*/</tw-passagedata><tw-passagedata pid="109" name="ch3-2error" tags="black center nobr" position="1500,2700" size="100,100">&lt;&lt;set _VNOptions to { showHistory: true }&gt;&gt;
 &lt;&lt;timed 0.5s t8n&gt;&gt;&lt;div class=&quot;title-box&quot;&gt;&lt;h3&gt;第三幕&lt;/h3&gt;&lt;/div&gt;&lt;&lt;/timed&gt;&gt;
 &lt;&lt;timed 1s t8n&gt;&gt;
 &lt;div id=&quot;vn-character&quot; style=&quot;background-image: url(&amp;quot;media/img/character_bg.png&amp;quot;);&quot;&gt;&lt;span id=&quot;characterimg&quot;&gt;&lt;img class=&quot;macro-crossfade-image&quot; src=&quot;media/img/文武判官.png&quot;&gt;&lt;/span&gt;&lt;/div&gt;
