--- a/twcitygod/final.html
+++ b/twcitygod/final.html
@@ -2,7 +2,7 @@
 <html data-init="no-js">
 <head>
 <meta charset="UTF-8" />
-<title>府城隍實境遊戲</title>
+<title>陰陽審判局</title>
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 <meta name="application-name" content="SugarCube" />
 <meta name="version" content="2.37.3" />
