--- a/twcitygod/final.html
+++ b/twcitygod/final.html
@@ -750,7 +750,7 @@ custom animation
   padding: 10px !important;
 }
 
-.vn-next-dialogue:hover, .vn-continue:hover, .vn-next-page:hover {
+.vn-next-dialogue:hover, .vn-continue:hover, .vn-next-page:hover, .vn-buttons .macro-button:hover {
   background: none !important;
   border: none !important;
   text-shadow: 2px 2px 3px #6e6e6e;
@@ -760,7 +760,7 @@ custom animation
 /* 對話回顧按鈕 */
 .vn-history-button,
 #vn-history button {
-  background: #d68858 !important;
+  background: #ff9047 !important;
   color: white !important;
   padding: 5px !important;
 }
@@ -1406,7 +1406,7 @@ body {
 /* links, button, select, textbox, listbox, cycle */
 
 a {
-  color: #31b1bd;
+  color: #64b6a1;
   opacity: 0.7;
 }
 
@@ -5181,7 +5181,7 @@ Set up your profile, stats and meters, and other relevant information here!
 /* [[ch2關卡1破關]] */</tw-passagedata><tw-passagedata pid="106" name="ch2關卡1-2提示" tags="" position="200,900" size="100,100">答案是選擇左上與右下的照片。</tw-passagedata><tw-passagedata pid="107" name="ch1-3error" tags="center nobr black" position="1800,1100" size="100,100">&lt;&lt;set _VNOptions to { showHistory: true }&gt;&gt;
 &lt;&lt;timed 0.5s t8n&gt;&gt;&lt;div class=&quot;title-box&quot;&gt;&lt;h3&gt;第一幕&lt;/h3&gt;&lt;/div&gt;&lt;&lt;/timed&gt;&gt;
 &lt;&lt;timed 1s t8n&gt;&gt;
-&lt;div id=&quot;vn-character&quot; style=&quot;background-image: url(&amp;quot;media/img/character_bg.png&amp;quot;);&quot;&gt;&lt;span id=&quot;characterimg&quot;&gt;&lt;img class=&quot;macro-crossfade-image&quot; src=&quot;media/img/文武判官.png&quot;&gt;&lt;/span&gt;&lt;/div&gt;
+&lt;div id=&quot;vn-character&quot; style=&quot;background-image: url(&amp;quot;media/img/character_bg2.png&amp;quot;);&quot;&gt;&lt;span id=&quot;characterimg&quot;&gt;&lt;img class=&quot;macro-crossfade-image&quot; src=&quot;media/img/文武判官.png&quot;&gt;&lt;/span&gt;&lt;/div&gt;
 &lt;div id=&quot;vn-text-main&quot; class=&quot;vn-speech-container&quot;&gt;
 &lt;div class=&quot;vn-name&quot; style=&quot;opacity: 1;&quot;&gt;文武判官&lt;/div&gt;
 &lt;div class=&quot;vn-dialogue&quot;&gt;
@@ -5194,7 +5194,7 @@ Set up your profile, stats and meters, and other relevant information here!
 /*[[ch1-4]]*/</tw-passagedata><tw-passagedata pid="108" name="ch3-4error" tags="center nobr black" position="2000,2700" size="100,100">&lt;&lt;set _VNOptions to { showHistory: true }&gt;&gt;
 &lt;&lt;timed 0.5s t8n&gt;&gt;&lt;div class=&quot;title-box&quot;&gt;&lt;h3&gt;第三幕&lt;/h3&gt;&lt;/div&gt;&lt;&lt;/timed&gt;&gt;
 &lt;&lt;timed 1s t8n&gt;&gt;
-&lt;div id=&quot;vn-character&quot; style=&quot;background-image: url(&amp;quot;media/img/character_bg.png&amp;quot;);&quot;&gt;&lt;span id=&quot;characterimg&quot;&gt;&lt;img class=&quot;macro-crossfade-image&quot; src=&quot;media/img/文武判官.png&quot;&gt;&lt;/span&gt;&lt;/div&gt;
+&lt;div id=&quot;vn-character&quot; style=&quot;background-image: url(&amp;quot;media/img/character_bg2.png&amp;quot;);&quot;&gt;&lt;span id=&quot;characterimg&quot;&gt;&lt;img class=&quot;macro-crossfade-image&quot; src=&quot;media/img/文武判官.png&quot;&gt;&lt;/span&gt;&lt;/div&gt;
 &lt;div id=&quot;vn-text-main&quot; class=&quot;vn-speech-container&quot;&gt;
 &lt;div class=&quot;vn-name&quot; style=&quot;opacity: 1;&quot;&gt;文武判官&lt;/div&gt;
 &lt;div class=&quot;vn-dialogue&quot;&gt;
@@ -5207,7 +5207,7 @@ Set up your profile, stats and meters, and other relevant information here!
 /*[[ch3-5]]*/</tw-passagedata><tw-passagedata pid="109" name="ch3-2error" tags="black center nobr" position="1500,2700" size="100,100">&lt;&lt;set _VNOptions to { showHistory: true }&gt;&gt;
 &lt;&lt;timed 0.5s t8n&gt;&gt;&lt;div class=&quot;title-box&quot;&gt;&lt;h3&gt;第三幕&lt;/h3&gt;&lt;/div&gt;&lt;&lt;/timed&gt;&gt;
 &lt;&lt;timed 1s t8n&gt;&gt;
-&lt;div id=&quot;vn-character&quot; style=&quot;background-image: url(&amp;quot;media/img/character_bg.png&amp;quot;);&quot;&gt;&lt;span id=&quot;characterimg&quot;&gt;&lt;img class=&quot;macro-crossfade-image&quot; src=&quot;media/img/文武判官.png&quot;&gt;&lt;/span&gt;&lt;/div&gt;
+&lt;div id=&quot;vn-character&quot; style=&quot;background-image: url(&amp;quot;media/img/character_bg2.png&amp;quot;);&quot;&gt;&lt;span id=&quot;characterimg&quot;&gt;&lt;img class=&quot;macro-crossfade-image&quot; src=&quot;media/img/文武判官.png&quot;&gt;&lt;/span&gt;&lt;/div&gt;
 &lt;div id=&quot;vn-text-main&quot; class=&quot;vn-speech-container&quot;&gt;
 &lt;div class=&quot;vn-name&quot; style=&quot;opacity: 1;&quot;&gt;文武判官&lt;/div&gt;
 &lt;div class=&quot;vn-dialogue&quot;&gt;
