--- a/twcitygod/final.html
+++ b/twcitygod/final.html
@@ -104,8 +104,7 @@ var LZString=function(){var r=String.fromCharCode,o="ABCDEFGHIJKLMNOPQRSTUVWXYZa
 		<div id="init-lacking"><p>Browser lacks capabilities required to play.</p><p>Upgrade or switch to another browser.</p></div>
 		<div id="init-loading"><div>Loading&hellip;</div></div>
 	</div>
-	<tw-storydata name="陰陽審判局" startnode="2" creator="Twine" creator-version="2.10.0" format="SugarCube" format-version="2.37.3" ifid="C2F70416-D44E-4965-BAC4-0347F1833ADF" options="" tags="" zoom="0.6" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css">@charset "UTF-8";
-/* IMPORT FONTS
+	<tw-storydata name="陰陽審判局" startnode="2" creator="Twine" creator-version="2.10.0" format="SugarCube" format-version="2.37.3" ifid="C2F70416-D44E-4965-BAC4-0347F1833ADF" options="" tags="" zoom="0.6" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css">/* IMPORT FONTS
 comment --
 webfont import
 */
@@ -154,6 +153,7 @@ webfont import
 @import url('https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400..800;1,400..800&display=swap');
 @import url('https://fonts.cdnfonts.com/css/open-dyslexic');
 
+@charset "UTF-8";
 
 /* root 
 comment --
@@ -170,13 +170,13 @@ set up your css variables here!
   --text_light: #111;
 
   /* fonts */
-  --fontbody: 'Noto Sans TC', sans-serif;
-  --font_01: 'Noto Sans TC', serif;
-  --font_02: 'Noto Serif TC', sans-serif;
-  --font_03: 'DotGothic16', sans-serif;
-  --font_04: 'Yuji Syuku', sans-serif;
-  --font_05: 'Iansui', cursive;
-  --font_06: 'cwTeXYen';
+  --fontbody: 'Noto Sans TC', Arial, sans-serif;
+  --font_01: 'Noto Sans TC', Arial, sans-serif;
+  --font_02: 'Noto Serif TC', Arial, serif;
+  --font_03: 'DotGothic16', Arial, sans-serif;
+  --font_04: 'Yuji Syuku', Arial, sans-serif;
+  --font_05: 'Iansui', Arial, cursive;
+  --font_06: 'cwTeXYen', Arial;
 }
 
 
