--- a/twcitygod/final.html
+++ b/twcitygod/final.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html data-init="no-js">
+<html data-init="no-js" lang="zh-Hant-TW">
 <head>
 <meta charset="UTF-8" />
 <title>陰陽審判局</title>
