--- a/twcitygod/final.html
+++ b/twcitygod/final.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html data-init="no-js" lang="zh-Hant-TW">
+<html data-init="no-js">
 <head>
 <meta charset="UTF-8" />
 <title>陰陽審判局</title>
@@ -170,12 +170,12 @@ set up your css variables here!
   --text_light: #111;
 
   /* fonts */
-  --fontbody: 'Noto Sans TC', Arial, sans-serif;
-  --font_01: 'Noto Sans TC', Arial, sans-serif;
-  --font_02: 'Noto Serif TC', Arial, serif;
-  --font_03: 'DotGothic16', Arial, sans-serif;
-  --font_04: 'Yuji Syuku', Arial, sans-serif;
-  --font_05: 'Iansui', Arial, cursive;
+  --fontbody: 'Noto Sans TC', sans-serif, Arial;
+  --font_01: 'Noto Sans TC', sans-serif, Arial;
+  --font_02: 'Noto Serif TC', serif, Arial;
+  --font_03: 'DotGothic16', sans-serif, Arial;
+  --font_04: 'Yuji Syuku', sans-serif, Arial;
+  --font_05: 'Iansui', cursive, Arial;
   --font_06: 'cwTeXYen', Arial;
 }
 
@@ -551,7 +551,7 @@ custom animation
   max-height: 80vh;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
+  transform: translate(-50%, -65%);
   font-size: 1em;
   line-height: 1.6;
   overflow: auto;
@@ -577,7 +577,7 @@ custom animation
 
 /* 旁白模式背景底部圖 */
 #diary-footer {
-  height: 15vh;
+  height: 20vh;
   width: 100%;
   background-image: url(media/img/diaryfooter.png);
   background-size: cover;
@@ -2419,6 +2419,11 @@ importScripts("https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js")
 
 /*設置favicon*/
 $(document.head).append("<link rel='icon' href='media/img/favicon.png'>");
+
+/*加上繁體中文語系*/
+$(document).ready(function () {
+	document.documentElement.setAttribute("lang", "zh-Hant-TW");
+  });
 
 /* 在<head>元素中置入google分析的script程式碼 */
 // 創建 <script> 元素
