--- a/twcitygod/final.html
+++ b/twcitygod/final.html
@@ -4670,7 +4670,7 @@ Set up your profile, stats and meters, and other relevant information here!
 &lt;name&gt;&lt;/name&gt;&lt;img&gt;七爺八爺.png&lt;/img&gt;&lt;p&gt;我看向城隍爺旁邊，兩位威武的男性，&lt;br&gt;渾身散發出男子氣魄，這莫非是⋯⋯&lt;/p&gt;
 &lt;name&gt;&lt;/name&gt;&lt;img&gt;七爺八爺.png&lt;/img&gt;&lt;p&gt;府城隍廟裡的抓鬼與判案的精英份子──七爺八爺。&lt;br&gt;祂們還曾經發佈一首主題歌「讓我逮捕祢」，是風靡陰界的偶像。&lt;/p&gt;
 &lt;name&gt;&lt;/name&gt;&lt;img&gt;七爺八爺.png&lt;/img&gt;&lt;p&gt;我偷偷買了兩張專輯，一張收藏用，一張拿來反覆播放。&lt;/p&gt;
-&lt;name&gt;&lt;/name&gt;&lt;img&gt;七爺八爺.png&lt;/img&gt;&lt;p&gt;那句——&lt;br&gt;「你的罪孽，我一筆一筆跟祢算，我聽不進去罪人的討饒。」&lt;br&gt;簡直是經典中的經典！&lt;/p&gt;
+&lt;name&gt;&lt;/name&gt;&lt;img&gt;七爺八爺.png&lt;/img&gt;&lt;p&gt;那句——&lt;br&gt;「祢的罪孽，我一筆一筆跟祢算，我聽不進去罪人的討饒。」&lt;br&gt;簡直是經典中的經典！&lt;/p&gt;
 &lt;name&gt;城隍爺&lt;/name&gt;&lt;img&gt;城隍.png&lt;/img&gt;&lt;p&gt;好，好，看來小之已經準備好了。&lt;/p&gt;
 &lt;name&gt;小之&lt;/name&gt;&lt;img&gt;小之.png&lt;/img&gt;&lt;p&gt;遵命。&lt;/p&gt;
 &lt;name&gt;城隍爺&lt;/name&gt;&lt;img&gt;城隍.png&lt;/img&gt;&lt;p&gt;那我來考考妳，如果妳是府城隍的實習判官，應該可以輕鬆回答。&lt;/p&gt;
@@ -5231,7 +5231,8 @@ Set up your profile, stats and meters, and other relevant information here!
 &lt;name&gt;&lt;/name&gt;&lt;img&gt;城隍.png&lt;/img&gt;&lt;p&gt;想不到城隍爺只是搖了搖頭，淡淡地說……&lt;/p&gt;
 &lt;name&gt;城隍爺&lt;/name&gt;&lt;img&gt;城隍.png&lt;/img&gt;&lt;p&gt;妳才解決了一個惡源，至少累積 100 個，才能算是功德圓滿。&lt;/p&gt;
 &lt;name&gt;小之&lt;/name&gt;&lt;img&gt;小之.png&lt;/img&gt;&lt;p&gt;什麼？！還差 99 個？！這也太遙遠了吧！&lt;/p&gt;
-&lt;name&gt;&lt;/name&gt;&lt;img&gt;小之.png&lt;/img&gt;&lt;p&gt;總之，事不宜遲，請大家趕快來府城隍廟，幫我提升破案效率！&lt;br&gt;我想早日回家！&lt;/p&gt;
+&lt;name&gt;&lt;/name&gt;&lt;img&gt;小之.png&lt;/img&gt;&lt;p&gt;總之，事不宜遲，請大家趕快來府城隍廟，幫我提升破案效率！&lt;/p&gt;
+&lt;name&gt;&lt;/name&gt;&lt;img&gt;小之.png&lt;/img&gt;&lt;p&gt;我想早日回家！&lt;/p&gt;
 &lt;name&gt;&lt;/name&gt;&lt;img&gt;小之.png&lt;/img&gt;&lt;p&gt;對了，大家來看我時，記得帶好吃的點心來喔。&lt;/p&gt;</tw-passagedata></tw-storydata>
 	<script id="script-sugarcube" type="text/javascript">
 	/*! SugarCube JS */
